<resources>
    <string name="app_name">MyUtbExplorer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_download_upload_manager">Download / Upload</string>

    <!-- Preference Titles -->
    <string name="messages_header_add_token">Add your Uptobox Token</string>
    <string name="token_title">Token</string>
    <string name="messages_header_style">Subtitle style</string>
    <string name="size_title">Size</string>
    <string name="size_summary">Select a size</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_create_folder">Create folder</string>
    <string name="menu_download_upload_manager">Download / Upload</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_cast">Cast</string>

    <!-- Menu Selection -->
    <string name="menu_cut">Cut</string>
    <string name="menu_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="paste">Paste here</string>
    <string name="cancel_paste">Cancel paste</string>
    <string name="menu_download">Download</string>

    <!-- Dialogs -->
    <string name="edit_file">Edit File</string>
    <string name="edit_folder">Edit Folder</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_favorite">Create Favorite</string>
    <string name="edit_file_description">Description</string>
    <string name="edit_file_password">Password</string>
    <string name="edit_file_name">Name</string>
    <string name="upload_title">Do you send file ?</string>
    <string name="cancel_title">Do you want cancel ?</string>
    <string name="delete_title">Delete</string>
    <string name="delete_message">Delete all completed ?</string>
    <string name="edit_file_public">Public</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_stream_details">Details</string>
    <string name="element_selected">X élément(s) sélectionné(s)</string>
    <string name="title_resume">Resume playback: X</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- Splash -->
    <string name="logo">logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
