<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/createFolder"
        android:icon="@drawable/ic_action_create_folder"
        android:title="@string/menu_create_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reload"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_reload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/downloadUploadManager"
        android:icon="@drawable/ic_action_download_upload_manager"
        android:title="@string/menu_download_upload_manager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/menu_cast"
        app:actionProviderClass="androidx.mediarouter.app.MediaRouteActionProvider"
        app:showAsAction="always" />


</menu>