<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/cut"
        android:icon="@drawable/ic_action_cut"
        android:title="@string/menu_cut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/menu_cut"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

</menu>